--- a/main.css
+++ b/main.css
@@ -125,9 +125,6 @@ html {
   .info_title{
     width: 80px;
   }
-  .section_inner2{
-    padding: 200px;
-  }
   .frame_child {
     position: absolute;
     top: 0;
@@ -143,8 +140,11 @@ html {
   .key {
     height: 500px;
     background: center / cover no-repeat url("sample_key.jpg");
+    display: flex;
     font-family: 'Noto Serif JP', serif;
     font-weight: bold;
+    flex-direction: column;
+    justify-content: center;
   }
   .key h1{
     font-size: 2.5rem;
